--- a/AirPLaylistReport/MainWindow.xaml
+++ b/AirPLaylistReport/MainWindow.xaml
@@ -6,12 +6,12 @@
         Loaded="OnLoad"
         xmlns:local="clr-namespace:AirPLaylistReport"
         mc:Ignorable="d"
-        Title="Air Playlist Export" Height="500" Width="850" Icon="/Icon1.ico" WindowStartupLocation="CenterScreen">
-    <Grid>
+        Title="Air Playlist Export" Height="500" Width="450" Icon="/Icon1.ico" WindowStartupLocation="CenterScreen">
+    <Grid Background="White">
         <Button x:Name="btnOpen" Content="Открыть файлы" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="41" Width="148" Click="btnOpen_Click"/>
-        <TextBox x:Name="textbox" HorizontalAlignment="Center" Margin="0,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="399" Height="24" Background="#FFE9E9E9"/>
-        <Button x:Name="btnExport" Content="Объединить" HorizontalAlignment="Center" Margin="0,405,0,0" VerticalAlignment="Top" Height="41" Width="148" Click="Button_Click"/>
-        <TextBlock x:Name="textblock" HorizontalAlignment="Left" Margin="166,258,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="43" Width="301"/>
+        <Button x:Name="btnExport" Content="Объединить" HorizontalAlignment="Center" Margin="0,391,0,0" VerticalAlignment="Top" Height="41" Width="148" Click="Button_Click"/>
+        <ListBox x:Name="listbox" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="88,141,88,114" SelectionChanged="ListBox_SelectionChanged"/>
+        <Label Content="Выбери файлы Air Playlist" HorizontalAlignment="Center" Margin="0,68,0,0" VerticalAlignment="Top" Width="150" BorderBrush="#FFF11D1D" Background="White"/>
 
     </Grid>
 </Window>
