--- a/AirPLaylistReport/MainWindow.xaml
+++ b/AirPLaylistReport/MainWindow.xaml
@@ -6,7 +6,7 @@
         Loaded="OnLoad"
         xmlns:local="clr-namespace:AirPLaylistReport"
         mc:Ignorable="d"
-        Title="Air Playlist Export" Height="500" Width="450" Icon="/Icon1.ico" WindowStartupLocation="CenterScreen">
+        Title="Air Playlist Export" Height="500" Width="450" Icon="/Resource/Icon1.ico" WindowStartupLocation="CenterScreen">
     <Grid Background="White">
         <Button x:Name="btnOpen" Content="Открыть файлы" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="41" Width="148" Click="btnOpen_Click"/>
         <Button x:Name="btnExport" Content="Объединить" HorizontalAlignment="Center" Margin="0,391,0,0" VerticalAlignment="Top" Height="41" Width="148" Click="Button_Click"/>
