--- a/AirPLaylistReport/StartWindow.xaml
+++ b/AirPLaylistReport/StartWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AirPLaylistReport"
         mc:Ignorable="d"
-        Title="CinegyMod" Height="450" Width="400" Icon="/Resource/Cinegy.ico" WindowStartupLocation="CenterScreen">
+        Title="CinegyMod" Height="450" Width="400" Icon="/Resource/Icon1.ico" WindowStartupLocation="CenterScreen">
     <Grid>
         <Button x:Name="btnPlaylist" Content="Объеденить плэйлисты" HorizontalAlignment="Center" Margin="0,103,0,0" VerticalAlignment="Top" Width="162" Height="31" Click="btnPlaylist_Click"/>
         <Button x:Name="btnXdcam" Content="Подготовить XDCAM файлы" HorizontalAlignment="Center" Margin="0,262,0,0" VerticalAlignment="Top" Width="162" Height="31"/>
