--- a/AirPLaylistReport/StartWindow.xaml
+++ b/AirPLaylistReport/StartWindow.xaml
@@ -8,7 +8,7 @@
         Title="CinegyMod" Height="450" Width="400" Icon="/Resource/Icon1.ico" WindowStartupLocation="CenterScreen">
     <Grid>
         <Button x:Name="btnPlaylist" Content="Объеденить плэйлисты" HorizontalAlignment="Center" Margin="0,103,0,0" VerticalAlignment="Top" Width="162" Height="31" Click="btnPlaylist_Click"/>
-        <Button x:Name="btnXdcam" Content="Подготовить XDCAM файлы" HorizontalAlignment="Center" Margin="0,262,0,0" VerticalAlignment="Top" Width="162" Height="31"/>
+        <Button x:Name="btnXdcam" Content="Подготовить XDCAM файлы" HorizontalAlignment="Center" Margin="0,262,0,0" VerticalAlignment="Top" Width="162" Height="31" Click="btnXdcam_Click"/>
 
     </Grid>
 </Window>
