--- a/AirPLaylistReport/App.xaml
+++ b/AirPLaylistReport/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AirPLaylistReport"
-             StartupUri="StartWindow.xaml">
+             StartupUri="MainWindowNew.xaml">
     <Application.Resources>
          
     </Application.Resources>
