--- a/AirPLaylistReport/MainWindowNew.xaml
+++ b/AirPLaylistReport/MainWindowNew.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="AirPLaylistReport.Xdcam"
+﻿<Window x:Class="AirPLaylistReport.MainWindowNew"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AirPLaylistReport"
-        mc:Ignorable="d" 
-        Title="Xdcam Prepare" Height="450" Width="253" WindowStyle="None" WindowStartupLocation="CenterScreen" AllowsTransparency="True" Background="Transparent">
+        mc:Ignorable="d" MouseLeftButtonDown="Window_MouseLeftButtonDown"
+        Title="MainWindowNew" Height="450" Width="500" Icon="/Resource/Icon1.ico" WindowStyle="None" WindowStartupLocation="CenterScreen" AllowsTransparency="True" Background="Transparent">
 
     <Window.Resources>
         <ImageBrush x:Key="Assets" ImageSource="Resource/Off_black.png" />
@@ -127,30 +127,57 @@
 
         <Grid>
 
+            <Grid.ColumnDefinitions>
+                <!--Navigation menu-->
+                <ColumnDefinition Width="210" />
+                <!--Content secion-->
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            
+            <!--Navigation Menu-->
+            <Border CornerRadius="15" BorderThickness="3"
+            Grid.Column="0">
+                <Border.Background>
+                    <ImageBrush ImageSource="/Resource/BG.png" TileMode="None" Stretch="UniformToFill"/>
+                </Border.Background>
 
-            <Button Style="{DynamicResource Button_mouseover}" x:Name="btnOpen" Content="" BorderThickness="0" BorderBrush="Transparent" Margin="25,57,21,0" VerticalAlignment="Top" Height="48" Click="Button_Click">
-                <Button.Background>
-                    <ImageBrush ImageSource="/Resource/5_choosefolder.png"/>
-                </Button.Background>
-            </Button>
+                <StackPanel Margin="19,0,19,0">
 
-            <Button Style="{DynamicResource Button_mouseover}" x:Name="btnExport" Content="" BorderThickness="0" BorderBrush="Transparent" Margin="24,0,22,75" Height="48" VerticalAlignment="Bottom" Click="Button_Click_1">
-                <Button.Background>
-                    <ImageBrush ImageSource="/Resource/5_start.png"/>
-                </Button.Background>
-            </Button>
+                    <Button Style="{DynamicResource Button_mouseover}" x:Name="btnPlaylist" Margin="0,110,0,0" Content="" BorderBrush="Transparent" VerticalAlignment="Top" Height="48" Click="btnPlaylist_Click">
+                        <Button.Background>
+                            <ImageBrush ImageSource="/Resource/1_mergeplaylist.png"/>
+                        </Button.Background>
+                    </Button>
 
-            <Button Style="{DynamicResource CloseButton}" Content="" BorderThickness="0" BorderBrush="Transparent" Margin="87,347,87,0" VerticalAlignment="Top" Height="40" FontFamily="Arial Black" Click="Button_Click_2">
-                <Button.Background>
-                    <ImageBrush ImageSource="/Resource/Off_red.png"/>
-                </Button.Background>
-            </Button>
+                    <Button Style="{DynamicResource Button_mouseover}" x:Name="btnXdcam" Content="" Margin="0,70,0,0" BorderBrush="Transparent" VerticalAlignment="Top" Height="48" Click="btnXdcam_Click">
+                        <Button.Background>
+                            <ImageBrush ImageSource="/Resource/2_readyxdcam.png"/>
+                        </Button.Background>
+                    </Button>
 
-            <TextBlock x:Name="Textblock1" Foreground="White" Margin="20,0,20,0" TextWrapping="Wrap" TextAlignment="Center" Height="70" VerticalAlignment="Center" FontFamily="Microsoft YaHei UI">
-                <TextBlock.Background>
-                    <ImageBrush ImageSource="/Resource/Screen.png"/>
-                </TextBlock.Background>
-            </TextBlock>
+                    <Button Style="{DynamicResource CloseButton}" Content="" BorderThickness="0" BorderBrush="Transparent" Margin="60,70,60,0" VerticalAlignment="Top" Height="40" FontFamily="Arial Black" Click="Button_Click_2" >
+                        <Button.Background>
+                            <ImageBrush ImageSource="/Resource/Off_red.png"/>
+                        </Button.Background>
+                    </Button>
+
+                </StackPanel>
+            
+            </Border>
+
+            <!--Main Section-->
+            <Border CornerRadius="15" BorderThickness="3"
+                Grid.Column="1">
+                <Border.Background>
+                    <ImageBrush ImageSource="/Resource/BG.png" TileMode="None" Stretch="UniformToFill" />
+                </Border.Background>
+
+                <ContentControl Content=""
+                                Margin="15" />
+
+
+            </Border>
+
         </Grid>
     </Border>
 </Window>
