--- a/AirPLaylistReport/Xdcam.xaml
+++ b/AirPLaylistReport/Xdcam.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AirPLaylistReport"
-        mc:Ignorable="d" 
+         mc:Ignorable="d" MouseLeftButtonDown="Window_MouseLeftButtonDown" 
         Title="Xdcam Prepare" Height="450" Width="253" WindowStyle="None" WindowStartupLocation="CenterScreen" AllowsTransparency="True" Background="Transparent">
 
     <Window.Resources>
