--- a/AirPLaylistReport/MainWindow.xaml
+++ b/AirPLaylistReport/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Loaded="OnLoad"
         xmlns:local="clr-namespace:AirPLaylistReport"
-        mc:Ignorable="d"
+        mc:Ignorable="d" MouseLeftButtonDown="Window_MouseLeftButtonDown"
         Title="Air Playlist Export" Height="450" Width="253" Icon="/Resource/Icon1.ico" WindowStyle="None" WindowStartupLocation="CenterScreen" AllowsTransparency="True" Background="Transparent">
     <Window.Resources>
         <ImageBrush x:Key="Assets" ImageSource="Resource/Off_black.png" />
